修改首页素材

--- a/scss/product.scss
+++ b/scss/product.scss
@@ -4,6 +4,10 @@
     margin: 0 !important;
 } */
 
+* {
+    font-family:  PingFangSC-Regular, PingFang SC !important;
+}
+
 .cxd-Layout--headerFixed {
     padding-top: 0 !important;
 }
