--- a/scss/product.scss
+++ b/scss/product.scss
@@ -33,7 +33,8 @@
 
 .cxd-Nav .cxd-Nav-list--tabs .cxd-Nav-item:hover > a, 
 .cxd-Nav .cxd-Nav-list--tabs .cxd-Nav-item > a:focus {
-    border: none !important;
+    border: 1px solid #fff !important;
+    color: #025DAD !important;
 }
 
 .sl-nav {
@@ -53,7 +54,20 @@
         display: block;
         line-height: 72px;
         font-size: 16px;
-        color: "#333";
+        // color: "#333";
+        color: "#ff0" !important;
+        font-weight: 600;
+        padding: "0 23px";
+        width: 40;
+    }
+    a:hover {
+        padding: 0 23px !important;
+        margin: 0 !important;
+        height: 72px;
+        display: block;
+        line-height: 72px;
+        font-size: 16px;
+        color: "#025DAD" !important;
         font-weight: 600;
         padding: "0 23px";
         width: 40;
@@ -116,4 +130,15 @@ button.cxd-Button.cxd-Button--default.cxd-Button--size-default.sl-more-btn {
 
 .sl-bottom-nav span.cxd-TplField a {
     color: #fff;
+}
+
+/* 关于我们 */
+.text-info-wrapper {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #414141;
+    p {
+        text-indent: 28px;
+    }
 }
