增加荣誉资质

--- a/scss/product.scss
+++ b/scss/product.scss
@@ -80,9 +80,6 @@
 }
 
 // 技术与服务
-.sl-image-container {
-
-}
 .sl-image-container .cxd-Image-title{
     background: #fff;
     width: 300px;
@@ -101,6 +98,10 @@
     text-align: center;
     color: #333;
     font-size: 16px;
+}
+
+.sl-about-image-container .cxd-Image-title{
+    width: 280px !important;
 }
 
 .sl-news-image-container .cxd-Image.cxd-Image--thumb {
@@ -146,3 +147,5 @@ button.cxd-Button.cxd-Button--default.cxd-Button--size-default.sl-more-btn {
         text-indent: 28px;
     }
 }
+
+/* 关于我们，荣誉资质 */
