增加人才招聘信息

--- a/scss/product.scss
+++ b/scss/product.scss
@@ -205,6 +205,24 @@ button.cxd-Button.cxd-Button--default.cxd-Button--size-default.sl-more-btn {
     }
 }
 
+.employ-title {
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    /* p {
+        margin: 6px !important;
+    } */
+}
+
+.employ-content {
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    p {
+        margin: 3px !important;
+    }
+}
+
 /* 联系我们留言面板 */
 .contact-comment-wrapper {
     padding: 24px 44px 48px 44px !important;
