调整联系我们界面样式

--- a/scss/product.scss
+++ b/scss/product.scss
@@ -205,27 +205,33 @@ button.cxd-Button.cxd-Button--default.cxd-Button--size-default.sl-more-btn {
     }
 }
 
-.employ-title {
-    font-size: 16px;
-    font-weight: 500;
-    color: #333;
-    /* p {
-        margin: 6px !important;
-    } */
-}
-
-.employ-content {
-    font-size: 14px;
-    font-weight: 400;
-    color: #333;
-    p {
-        margin: 3px !important;
+// 人才招聘
+.employ-wrapper {
+    .employ-title {
+        font-size: 16px;
+        font-weight: 500;
+        color: #333;
+        /* p {
+            margin: 6px !important;
+        } */
+    }
+    
+    .employ-content {
+        font-size: 14px;
+        font-weight: 400;
+        color: #333;
+        p {
+            margin: 3px !important;
+        }
+    }
+    .cxd-Collapse-content {
+        padding-top: 0 !important;
     }
 }
 
 /* 联系我们留言面板 */
 .contact-comment-wrapper {
-    padding: 24px 44px 48px 44px !important;
+    padding: 16px 28px 30px 28px !important;
     margin-top: "24px" !important;
     text-align: center !important;
     .cxd-Form-label {
