--- a/scss/product.scss
+++ b/scss/product.scss
@@ -243,6 +243,19 @@ button.cxd-Button.cxd-Button--default.cxd-Button--size-default.sl-more-btn {
     } 
 }
 
+/* 信息页面 */
+.info-detail-wrapper {
+    padding: 24px 160px 24px 30px !important;
+    width: 100%;
+    height: 100%;
+    .info-title {
+        span {
+            display: block !important;
+            text-align: center !important;
+        }
+    }
+}
+
 /* 后台管理样式 */
 .admin-aside-wrapper {
     min-width: 400px !important;
