--- a/scss/product.scss
+++ b/scss/product.scss
@@ -77,6 +77,12 @@
     }
 }
 
+.nav-container .nav-title {
+    font-size: 16px;
+    font-weight: 600;
+    color: #333 !important;
+}
+
 // 关于我们
 .about-us-wrapper {
     padding: "80px 40px"
