--- a/scss/product.scss
+++ b/scss/product.scss
@@ -100,9 +100,9 @@
     font-size: 14px;
     color: #333;
     font-weight: 400; */
-    background-color: #EDEDED;
-    font-weight: 600;
-    color: #025DAD;;
+    background-color: #C4E3FF;
+    font-weight: 500;
+    color: #333;;
 }
 
 // 首页轮播图
