首页技术与服务, 增加轮播

--- a/scss/product.scss
+++ b/scss/product.scss
@@ -158,12 +158,31 @@ button.cxd-Button.cxd-Button--link.cxd-Button--size-default.home-active.nav-titl
     visibility: visible;
 }
 
+// 首页图片左右轮播切换
+.slider-wrapper {
+    width: 100%;
+    height: 240px;
+    overflow: hidden;
+    a {
+        margin-right: 26px;
+    }
+}
+
+// 图片左右移动，左侧向左图标
+/* .slider-left-arrow img.cxd-Image-image {
+    width: 36px !important;
+    height: 36px !important;
+    position: "absolute";
+    left: "-60px";
+    top: "236px";
+} */
+
 // 关于我们
 .about-us-wrapper {
     padding: "80px 40px"
 }
 
-// 技术与服务
+// 技术与服
 .sl-image-container .cxd-Image-title{
     background: #fff;
     width: 300px;
@@ -384,3 +403,4 @@ button.cxd-Button.cxd-Button--default.cxd-Button--size-default.sl-more-btn {
 .admin-aside-wrapper {
     min-width: 400px !important;
 }
+
